2008-07-04  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/compile-refer, pass1/find-symbol-in-lvars): Rewrote in C++ for perfomance.

        * CompilerProcedures.h: Added procedures for compiler.

        * compiler.scm (pass3/add-can-frees2): Improved very slow (append2 ...) call on compiler.

2008-07-03  higepon  <higepon@users.sourceforge.jp>

        * CodeBuilder.h (scheme): use ObjectVector instead of gc_vector<Object, gc_allocator<Object> > for perfomance.

        * freeproc.cpp (listTovectorEx): Added for perfomance.

2008-07-02  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$asm): Rewrote internal define to global define for perfomance.

2008-07-01  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (lengthEx): Rewrote (length ...) in C++ for perfomance.

        * compiler.scm (pass4/fixup-labels): Rewrote in C++ for perfomance.

2008-06-30  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (run): Improved cprocedure call speed.

2008-06-28  higepon  <higepon@users.sourceforge.jp>

        * Added (eq-hashtable-copy ht).

        * compiler.scm: removed set-union and set-intersect.


        * compiler.scm (pass3/$call): Changed (%set-union can-frees vars) => (append2 can-frees vars) for perfomance. (thx! koguro)

        * scheme.cpp (Object::cons): comment out source info copy. This made mosh very slow.

        * compiler.scm (pass3/find-free): Removed unnecesary append.

2008-06-26  higepon  <higepon@users.sourceforge.jp>

        * Improved compilaion speed on pass3 phase.

        * freeproc.cpp : Added (make-code-builder), (code-builder-put! cb o),
                               (code-builder-append cb1 cb2) and (code-builder-emit cb).

        * CodeBuilder.h (scheme): Added CodeBuilder object used for more efficient compilation.

2008-06-23  higepon  <higepon@users.sourceforge.jp>
